@@ -3,6 +3,8 @@ git-annex (5.20151103) UNRELEASED; urgency=medium
   * Avoid installing desktop file and program file if cabal install
     git-annex is run as root, since that is not a systemwide install,
     but to /root, and so generating a systemwide desktop file is not right.
+  * When cabal install is run with the desktop file location not writable,
+    display a warning, but continue successfully.
 
  -- Joey Hess <id@joeyh.name>  Tue, 03 Nov 2015 10:36:43 -0400
 
